k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-system
  labels:
    name: student-system
